k8sdemo.yaml
# 2048 deployment and service
# Service

apiVersion: v1
kind: Service
metadata:
  name: twofour-service
  labels:
    app: twofour-service
spec:
  ports:
  - port: 80
    targetPort: 80
    name: http
  selector: 
    app: twofour-game
  type: ClusterIP

---

# Deployment

apiVersion: apps/v1
kind: Deployment
metadata:
  name: twofour-game
spec:
  selector:
    matchLabels:
      app: twofour-game
  replicas: 2
  template:
    metadata:
      labels:
        app: twofour-game
    spec: 
      containers: 
      - name: 2048-container
        image: "cnrock/2048"
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 20

---

# Snake deployment and service
# Service

apiVersion: v1
kind: Service
metadata:
  name: snake-service
  labels:
    app: snake-service
spec:
  ports:
  - port: 80
    targetPort: 8080
    name: http
  selector: 
    app: snake-game
  type: ClusterIP

---

# Deployment

apiVersion: apps/v1
kind: Deployment
metadata:
  name: snake-game
spec:
  selector:
    matchLabels:
      app: snake-game
  replicas: 2
  template:
    metadata:
      labels:
        app: snake-game
    spec: 
      containers: 
      - name: snake-container
        image: "aschil/snake"
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20

---

# Ingress

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: twofoursnake-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "supersecret-key" 
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /twofour
        pathType: Prefix
        backend:
          service:
            name: twofour-service
            port:
              number: 80
      - path: /snake
        pathType: Prefix
        backend:
          service:
            name: snake-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: snake-service
            port:
              number: 80
